Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ a:link, a:visited {color: #acf;}
 a:not(.tooltip):hover {opacity: 0.65; transition: 0.2s;}
 
 /* Galleries */
+#gallery {margin-top: -2.65em;}
 #gallery .screenshot {
     height: calc(75%/16*10); background-position: center; background-size: cover; border: 5px solid #444; transition: 3s;
 }
